# python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md
examples/dash_min/: app.py
examples/django_min/: README.md  app.py
examples/fastapi_min/: app.py
examples/flask_min/: app.py
examples/streamlit_min/: app.py
tests/: conftest.py  test_client.py  test_config.py  test_django.py  test_edge_cases.py  test_example_dash.py  test_example_fastapi.py  test_example_flask.py  test_example_streamlit.py  test_payloads.py
usethatapp/: __init__.py  client.py  config.py  discovery.py  django_helpers.py  encryption.py  errors.py  payloads.py  types.py  webapps.py
