[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usethatapp"
version = "0.3.0"
description = "For use in your UseThatApp Web Apps"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "UseThatApp", email = "support@usethatapp.com"}]
license = "MIT"
license-files= ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["UseThatApp", "Python", "Web Apps"]
dependencies = [
    "cryptography>=46.0.5,<47",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/UseThatApp/python"
Changelog = "https://github.com/UseThatApp/python/blob/main/CHANGELOG.md"
Documentation = "https://docs.usethatapp.com"
Repository = "https://github.com/UseThatApp/python"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["usethatapp*"]

